Squashing a load more FindBugs warnings